# py-cxx-module

./: LICENSE  README.md  cmakelists.txt  pyproject.toml
src/mon_module/: mon_module.cxx  mon_module.h
test/: script.py
